--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -25,7 +25,11 @@
         <div id="content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-3">
+                    <div class="bg-image"></div>
+                    <div class="login-page">
+                    <div class="login-form">
+                    <div class="col-md-12">
+                        <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br>
                     <h2>User Profile</h2>
                     <p>Username: {{currentUser.username}}</p>
                     <div class="line"></div>
@@ -37,6 +41,8 @@
                     <div class="line"></div>
                     </div>
                 </div>
+                </div>
+                </div>  
             </div>
         </div>
 
