--- a/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
+++ b/src/app/coffee-chat-navbar/coffee-chat-navbar.component.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-lg" style="background-color: #e4955e;">
         <div class="container-fluid">
-            <a class="navbar-brand fancy-font text-grey" style="font-size: 40px;">Coffee Chat</a>
+            <a class="navbar-brand fancy-font text-grey m-2" style="font-size: 40px;">Coffee Chat</a>
             <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent">
                 <span class="fa fa-bars" style="color: white"></span>
