--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.css
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.css
@@ -14,7 +14,7 @@ p, h1, h2, h3, h4, h5, h6, ul {
   
   img {
     max-width: 100%;
-    max-height: 500px; }
+    max-height: 600px; }
   
   ul {
     padding-left: 0;
@@ -29,7 +29,8 @@ p, h1, h2, h3, h4, h5, h6, ul {
     resize: none; }
   
   :focus {
-    outline: none; }
+    outline: none;
+    opacity: 0.7; }
   
   .wrapper {
     min-height: 75vh;
@@ -38,7 +39,7 @@ p, h1, h2, h3, h4, h5, h6, ul {
     font-family: 'Montserrat' !important; }
   
   .inner {
-    min-width: 850px;
+    min-width: 200px;
     margin: auto;
     display: flex; }
   
@@ -55,9 +56,9 @@ p, h1, h2, h3, h4, h5, h6, ul {
         width: 50%;
         background: ivory;
         background-size: 100%;
-        padding-top: 63px;
-        padding-left: 45px;
-        padding-right: 45px; 
+        padding-top: 35px;
+        padding-left: 30px;
+        padding-right: 30px; 
         color: grey;
     }
   
@@ -89,15 +90,15 @@ p, h1, h2, h3, h4, h5, h6, ul {
       position: absolute;
       transform: translateY(-21px);
       left: 30px;
-      bottom: 0px; 
       top: 30px;
-      color: grey; }
+  }
   
   .form-control {
-    width: 67.08%;
+    width: 90.08%;
     height: 15%;
     display: block;
     font-size: 13px;
+    justify-content: center;
     border: none;
     border-bottom: 1px solid rgb(78, 78, 78);
     background: none;
@@ -113,7 +114,7 @@ p, h1, h2, h3, h4, h5, h6, ul {
     cursor: pointer;
     width: 50px;
     font-size: 15px;
-    justify-content: center;
+    justify-content: center !important;
     transform: translateY(-1px); }
   
   button {
@@ -147,9 +148,10 @@ p, h1, h2, h3, h4, h5, h6, ul {
       padding-bottom: 33px; }
   
     .image-holder {
-      max-height: 490px; } }
+      max-height: 600px;
+      min-height: 75vh; } }
       
-  @media (max-width: 600px) {
+  @media (max-width: 767px) {
     .inner {
       display: block; }
   
@@ -160,7 +162,7 @@ p, h1, h2, h3, h4, h5, h6, ul {
       width: 100%; }
   
     form {
-      padding: 50px 20px; }
+      padding: 50px 50px; }
   
     .wrapper {
       background: none; } }
