--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.css
@@ -1,22 +1,3 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
-.h2{
-    padding-top: 500px;
-}
 
 /* ---------------------------------------------------
     CONTENT STYLE
@@ -29,67 +10,8 @@ p {
 }
 
 .row{
-  padding-top: 50px;
+  margin-top: 20px;
 }
-
-
-/* ---------------------------------------------------
-    BUTTON STYLE
------------------------------------------------------ */
-  body{
-    text-align:center;
-  }
-  body:before{
-    content:'';
-    height:100%;
-    display:inline-block;
-    vertical-align:middle;
-  }
-  .button-choice{
-    background:#8b593b;
-    color:#fff;
-    border:none;
-    position:relative;
-    width: 420px;
-    height:180px;
-    font-size:1.6em;
-    padding:0 2em;
-    cursor:pointer;
-    transition:800ms ease all;
-    outline:none;
-    white-space: normal;
-    word-wrap: break-word;
-  }
-  
-  .button-choice:before,button-choice:after{
-    content:'';
-    position:absolute;
-    top:0;
-    right:0;
-    height:2px;
-    width:0;
-    background: #8b593b;
-    transition:400ms ease all;
-  }
-  .button-choice:after{
-    right:inherit;
-    top:inherit;
-    left:0;
-    bottom:0;
-  }
-  .button-choice:hover:before,button-choice:hover:after{
-    width:100%;
-    transition:800ms ease all;
-  }
-  
-/*-------------------------------------
-            BOX
---------------------------------------*/
-  .boxed {
-    border: 1px solid rgb(95, 48, 10) ;
-  }
-
-
 /* ---------------------------------------------------
     Regular CSS
 ----------------------------------------------------- */
@@ -104,7 +26,7 @@ p {
 
 .heading{
   border-color: grey;
-  background-color: #D8E4E7;
+  background-color: #ffd59a;
 }
 
 .btn-2{
@@ -221,7 +143,3 @@ display: none;
     background-color:#7CA5AF;
     color: white; 
 }
-
-
-
-
