--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
@@ -26,15 +26,27 @@
 <body>
 
         <!-- Page Content Holder -->
-        <div id="content">
-            <h3>Upcoming Meetings</h3>
+        <div class="coffee-chat" id="content">        
             <div class="row">
-                <div class="col-md-auto center-block">
-                    <h5>Meetings I Scheduled...</h5>
-                </div>
-                <div class="col-sm-10 offset-sm-1">
+                <div class="col-sm-6">
+                    <h2 class="type-font text-center mt-3" style="color: white;">Meetings I am Hosting</h2>
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between heading">
+                        <li class="list-group-item d-flex justify-content-start heading">
+                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
+                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of meetings"  [ngValue]="meeting">
+                            <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</p>
+                            <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.time}}</p>
+                            <div class="icons">
+                                <button class="btn-2" title="View" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey"></span></button>                            </div>
+                        </li>
+                      </ul>
+                </div>
+                <div class="col-6">
+                    <h2 class="type-font text-center mt-3" style="color: white;">Meetings I am Attending</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-start heading">
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
                         </li>
