--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <body>
-    <nav class="navbar navbar-expand-md" style="background: #a5a5a5; margin-bottom: 0px;">
+    <nav class="navbar navbar-expand-lg" style="background: #a5a5a5; margin-bottom: 0px;">
         <div class="container-fluid">
             <a class="navbar-brand" style="padding: 10px" href="#"><img src="assets/images/logo transparent.png" alt="" width="80" height="60"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
