--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.css
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.css
@@ -1,19 +1,3 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
 .text-centered{
     text-align: center;
 }
@@ -28,27 +12,6 @@ p {
     margin-bottom: 12px;
 }
 
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-}
-
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    margin-bottom: 5px;
-}
-
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -60,3 +23,114 @@ ul.CTAs a {
 }
 
     
+.coffee-container{
+   display: inline-flex;
+   flex-direction: column;
+   align-items: center !important;
+   justify-content: center;
+   background-color: rgba(173, 216, 230, 0.507);
+   width: 33%;
+   height: 100%;
+   box-shadow: 2px 2px 5px grey;
+}
+
+.journal-container{
+   display: inline-flex;
+   flex-direction: column;
+   align-items: stretch;
+   justify-content: center;
+   background-color: lavender;
+   width: 33%;
+   height: 100%;
+}
+
+.mood-container{
+    display: inline-flex;
+   flex-direction: row;
+   align-items: flex-start;
+   background-color: lavender;
+   width: 33%;
+   height: 100%;
+}
+
+.card{
+    margin: 5px;
+    min-width: 300px;
+    max-width: 500px;
+    border-radius: 0;
+    box-shadow: 1px 1px 5px grey;
+}
+
+.card:hover{
+    box-shadow: 2px 2px 5px grey;
+}
+
+.card-title{
+    display: inline-flex;
+    justify-content: space-between !important;
+}
+
+.card, .card-body, .card-text{
+    max-width: 100%;
+    background-color: lavender;
+    font-size: 14px;
+}
+
+.link{
+    color: grey;
+}
+
+
+.btn-2{
+    background: unset;
+    border: unset;
+    outline: unset;
+    color: black;
+}
+
+.button{
+    border: 1px solid #e4955e;
+    background-color: ivory;
+    color: #e4955e;
+    padding: 5px 12px;
+    font-size: 12px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button:hover{
+    background-color:#e4955e;
+    color: white; 
+}
+
+.list-group{
+    background-color: ivory;
+    border-color: grey !important;
+}
+.list-group-item{
+    outline: grey !important;
+}
+
+.heading{
+    border-color: grey;
+    background-color: #D8E4E7;
+}
+
+.btn-2{
+    background: unset;
+    border: unset;
+    outline: unset;
+}
+
+.list-group-item:hover .icons {
+	display: block;
+}
+
+.icons {
+	padding-top: 12px;	
+	padding-right: 7px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: none;
+}
