--- a/src/app/user-profile-navbar/user-profile-navbar.component.html
+++ b/src/app/user-profile-navbar/user-profile-navbar.component.html
@@ -1,21 +1,22 @@
 
-            <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #dad8d8;">
+            <nav class="navbar navbar-expand-lg" style="background-color: #a1c2a8;">
                 <div class="container-fluid">
-                    <a class="navbar-brand fancy-font" style="font-size: 45px;">User Profile</a>
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
+                    <a class="navbar-brand text-grey fancy-font" style="font-size: 40px;">User Profile</a>
+                    <a class="reg-font text-grey" style="font-size: 30">>> {{currentPage}}</a>
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent">
+                        <span class="fa fa-bars" style="color: white"></span>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="user-profile">Profile</a>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="user-profile">Profile</a>
                             </li>
-                            <li>
-                                <a class="nav-link" href="user-profile-dashboard">Dashboard</a>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="user-profile-dashboard">Dashboard</a>
                             </li>
-                            <li>
-                                <a class="nav-link" href="user-profile-contacts">Contacts</a>
+                            <li class="nav-item">
+                                <a class="nav-link reg-font text-grey hoverable" href="user-profile-contacts">Contacts</a>
                             </li>
                         </ul>
                     </div>
