--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -17,64 +17,59 @@
 
 
 </head>
-<div>
-    <app-navbar style="z-index: 9999;"></app-navbar>
-</div>
+
 <div class="sticky-top">
-    <app-coffee-chat-navbar style="z-index: 1;"></app-coffee-chat-navbar>
+    <app-navbar></app-navbar>
+</div>
+<div class="coffee-chat-navbar">
+    <app-coffee-chat-navbar></app-coffee-chat-navbar>
 </div>
 
 <body>
 
-    <!-- Page Content Holder -->
-    <div class="coffee-chat" id="content">
-        <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
-        <!---Pull from JSON for Participant names-->
-        <div class="wrapper">
-            <div class="inner">
-            <form [formGroup]="createRandomMeeting" (ngSubmit)="onSubmit()">
-                 <h3>Start Connecting</h3>
-                <div class="form-wrapper">
-                    <label style="font-weight: 600;">Number of People:</label>
+        <!-- Page Content Holder -->
+        <div id="content">
 
-                    <div class="form-holder">
-                        <i class="fa fa-chevron-down fa-sm"></i>
-                    <select formControlName="numPeople" class="form-control"> 
-                        <option *ngFor="let number of numberList" [ngValue]="number" class="justify-content-center">{{number}}</option>
-                    </select>
-                    
+            <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
+            <!---Pull from JSON for Participant names-->
+
+            <div class="container">
+                <div class="row justify-content-center">
+                    Start Connecting (Randomly Generate Friends)
                 </div>
-                </div>
-                <div class="form-group">
-                    <label for="start" style="color: black; font-weight: 600;">Date:</label>
-                        <input type="date" id="start" name="trip-start"  
-                            value="dateToday"
-                            min="yyyy-mm-dd" max="2100-12-31" 
-                            formControlName="date" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.date.errors }">
-                            <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-                                <div *ngIf="f.date.errors.required" style="font-size: 12px;">Date is required</div>
-                            </div>
-                </div>
-                <div class="form-group">
-                        <label for="default-picker" style="color: black; font-weight: 600;">Time:</label>
-                        <input type="time" id="default-picker" placeholder="Select time" formControlName="time" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.time.errors }">
-                        <div *ngIf="submitted && f.time.errors" class="invalid-feedback">
-                            <div *ngIf="f.time.errors.required">Time is required</div>
+                <div class="row justify-content-center">    
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <label for="people">People: </label>
+                            <ng-multiselect-dropdown-angular7
+                                [data]="peopleList"
+                                [settings]="dropdownSettings"
+                                (onSelect)="onPersonSelect($event)"
+                                (onSelectAll)="onSelectAll($event)"
+                            >
+                            </ng-multiselect-dropdown-angular7>
                         </div>
+                        <div class="col-sm-12">
+                            <label for="start">Date:</label>
+                                <input type="date" id="start" name="trip-start"  
+                                    value="2018-07-22"
+                                    min="2018-01-01" max="2020-12-31">
+                        </div>
+                        <div class="col-sm-12">
+                            <div class="md-form md-outline">
+                                <label for="default-picker">Time:</label>
+                                <input type="time" id="default-picker" class="form-control" placeholder="Select time">
+                              </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-wrapper justify-content-center">
-                    <button [disabled]="loading" class="button">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" routerLink="/coffee-chat-profiles"></span>
-                        Create Meeting
-                    </button>
-                </div>
-            </form>
-            <div class="image-holder">
-                <img src="../assets/images/coffee random friends.jpg" alt="">
             </div>
-        </div>    
-    </div>
 
+
+            
+        </div>
+
+        
         
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -84,4 +79,7 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
+
+<app-footer></app-footer>
+
 </html>
