--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -1,83 +1,70 @@
-<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="coffee-chat-select-friends.component.css">
-
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
-
 </head>
-
+<div> 
+    <app-navbar style="z-index: 9999;"></app-navbar>
+</div>
 <div class="sticky-top">
-    <app-navbar></app-navbar>
+    <app-coffee-chat-navbar style="z-index: 1;"></app-coffee-chat-navbar>
 </div>
-<div class="coffee-chat-navbar">
-    <app-coffee-chat-navbar></app-coffee-chat-navbar>
-</div>
-
 <body>
+<!--JS USED-->
 
         <!-- Page Content Holder -->
-        <div id="content">
+        <div class="coffee-chat" id="content">
+            <div class="wrapper">
+                <div class="inner">
+                    <form [formGroup]="createMeeting" (ngSubmit)="onSubmit()">
+                    <h3>Start Connecting</h3>
+                    <label for="people" style="color: black; font-weight: 600;">People:</label>
+                    <div class="user-select">
+                        <div *ngFor="let person of peopleList"  [ngValue]="person">
+                            <input type="checkbox" id="checkbox"(change)="userSelect(person.username)" [disabled]="maxCapacity && !this.selectedPeople.includes(person.username)">
 
-            <!--Adjust the min and max value to the min being today and the max up to one-year ahead -->
-            <!---Pull from JSON for Participant names-->
-
-            <div class="container">
-                <div class="row justify-content-center">
-                    Start Connecting (Select Friends)
-                </div>
-                <div class="row justify-content-center">    
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <label for="people">People: </label>
-                            <ng-multiselect-dropdown-angular7
-                                [data]="peopleList"
-                                [settings]="dropdownSettings"
-                                (onSelect)="onPersonSelect($event)"
-                                (onSelectAll)="onSelectAll($event)"
-                            >
-                            </ng-multiselect-dropdown-angular7>
-                        </div>
-                        <div class="col-sm-12">
-                            <label for="start">Date:</label>
-                                <input type="date" id="start" name="trip-start"  
-                                    value="2018-07-22"
-                                    min="2018-01-01" max="2020-12-31">
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="md-form md-outline">
-                                <label for="default-picker">Time:</label>
-                                <input type="time" id="default-picker" class="form-control" placeholder="Select time">
-                              </div>
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="md-form md-outline">
-                                <label>Profiles</label>
-                                <button class="Profiles" style="margin:40px" routerLink="/coffee-chat-profiles">Meeting Participant Profiles</button>
-                            </div>
+                            <label>{{person.firstName}} {{person.lastName}}</label>
                         </div>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <label for="start" style="color: black; font-weight: 600;">Date:</label>
+                            <input type="date" id="start" name="trip-start"  
+                                value="dateToday"
+                                min="yyyy-mm-dd" max="2100-12-31" 
+                                formControlName="date" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.date.errors }">
+                                <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
+                                    <div *ngIf="f.date.errors.required">Date is required</div>
+                                </div>
+                    </div>
+                    <div class="form-group">
+                            <label for="default-picker" style="color: black; font-weight: 600;">Time:</label>
+
+                            <input type="time" id="default-picker" placeholder="Select time" formControlName="time" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.time.errors }">
+                            <div *ngIf="submitted && f.time.errors" class="invalid-feedback">
+                                <div *ngIf="f.time.errors.required">Time is required</div>
+                            </div>
+                    </div>
+                    <div class="form-wrapper justify-content-center">
+                        <button [disabled]="loading">
+                            <a routerLink="/coffee-chat-profiles"></a>
+                            Create Meeting
+                        </button>
+                    </div>
+                </form>
+            <div class="image-holder">
+                <img src="../assets/images/coffee select friends.jpg" alt=""> 
             </div>
-
-
-            
         </div>
-
-        
-        
-
+    </div>   
+        </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
@@ -85,7 +72,4 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
-
-<app-footer></app-footer>
-
 </html>
