--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,8 @@
         <div class="container">
             <div class="login-form">
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                   <div class="reg-font">Register</div> 
+                    <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br><br>
+                    <div class="reg-font">Meaningful Minutes</div>
                     <hr>
                 <div class="form-group">
                     <input type="text" placeholder="First Name" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
@@ -83,7 +84,7 @@
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
         </button>
-        <p class="message"><a routerLink="/login" class="btn btn-link">Cancel</a></p>
+        <p class="message"><a href="/login">Cancel</a></p>
     </div>
 </form>
 </div>
