--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.css
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.css
@@ -22,24 +22,30 @@
     transition: all 0.3s;
 }
 
+h4{
+    font-family: 'Playfair Display';
+    justify-content: center;
+}
+
+.row{
+    margin-top: 5;
+}
+
     
 .coffee-container{
    display: inline-flex;
-   flex-direction: column;
+   flex-direction: row;
    align-items: center !important;
-   justify-content: center;
-   background-color: rgba(173, 216, 230, 0.507);
+   justify-content: end;
    width: 33%;
    height: 100%;
-   box-shadow: 2px 2px 5px grey;
 }
 
 .journal-container{
    display: inline-flex;
    flex-direction: column;
    align-items: stretch;
-   justify-content: center;
-   background-color: lavender;
+   justify-content: flex-end;
    width: 33%;
    height: 100%;
 }
@@ -48,15 +54,17 @@
     display: inline-flex;
    flex-direction: row;
    align-items: flex-start;
-   background-color: lavender;
    width: 33%;
    height: 100%;
 }
 
 .card{
     margin: 5px;
-    min-width: 300px;
-    max-width: 500px;
+    width: 500px;
+    min-width: 200px;
+    max-width: 600px;
+    min-height: 100px;
+    max-height: 300px;
     border-radius: 0;
     box-shadow: 1px 1px 5px grey;
 }
@@ -96,6 +104,7 @@
     font-size: 12px;
     cursor: pointer;
     border-radius: 5px;
+    margin: 1;
 }
 
 .button:hover{
