--- a/src/app/user-profile-dashboard/user-profile-dashboard.component.html
+++ b/src/app/user-profile-dashboard/user-profile-dashboard.component.html
@@ -24,27 +24,42 @@
 </div>
 <body>
     <div id="content">
-        
-        <div class="journal-container">
-            <h4 class="text-center">Recent Entries</h4>
-            <ul class="list-group">
-                <li>
-                    Random Entry
-                </li>
-            </ul>
-        </div>
+        <div class="row">
         <div class="mood-container">
             <div class="container">
-                <a>Graphs go here</a>
+                <h4>Mood Tracker Data</h4>
+                <app-pie-chart></app-pie-chart>
 
             </div>
         </div>
+        <div class="journal-container">
+            <h4 class="text-center">Recent Journal Entries</h4>
+            <div class="col-sm-10 offset-sm-1">
+                <ul class="list-group">
+                    <li class="list-group-item d-flex justify-content-between heading">
+                        <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
+                        <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Title:</p>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between" *ngFor="let entry of entries; index as i" [ngValue]="entry">
+                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.month}}/{{entry.day}}/{{entry.year}}</p>
+                        <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}} {{i}} </p>
+                        <div class="icons">
+                            <button class="btn-2" title="Edit" (click)="getValue(entry)"><span class="fa fa-pencil fa-sm" style="color: grey"></span></button>
+                            <button class="btn-2" title="View" (click)="getEntry(entry)" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey"></span></button>
+                            <button class="btn-2" title="Delete" (click)="getEntry(entry)" data-toggle="modal" data-target="#delete"><span class="fa fa-trash-o"  style="color: grey"></span></button>
+                        </div>
+                    </li>
+                  </ul>
+            </div>
+        </div>
+        </div>
+        <div class="row">
         <div class="coffee-container">
-            <h4>Upcoming Meetings</h4>
+            <h4>Upcoming Coffee Chat Meetings</h4>
             <div class="card">
                 <div class="card-title justify-content-end reg-font mb-0 mt-3 ml-3 mr-3">
-                    <a style=" font-size: 16px; font-weight: 500;">Sat, May 14</a>
-                    <a style=" font-size: 16px;">10:00 AM</a>
+                    <a style=" font-size: 14px; font-weight: 500;">Sat, May 14</a>
+                    <a style=" font-size: 14px;">10:00 AM</a>
                 </div>
                 <div class="card-body mt-0">
                     <hr class="divide mt-0 mb-2" />
@@ -63,6 +78,7 @@
                     </div>
                     </div>
                 </div>
+                </div>  
 
                 
         </div>          
