--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
@@ -35,7 +35,7 @@
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
                         </li>
-                        <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of meetings"  [ngValue]="meeting">
+                        <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of hostingMeetings"  [ngValue]="meeting">
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</p>
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.time}}</p>
                             <div class="icons">
@@ -51,7 +51,7 @@
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
 
                         </li>
-                        <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of meetings"  [ngValue]="meeting">
+                        <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of attendingMeetings"  [ngValue]="meeting">
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</p>
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.time}}</p>
                            
@@ -75,7 +75,7 @@
                         <br>
                         Participants:
                         <div *ngFor="let participant of currentMeeting.participants" [ngValue]="participant">
-                            {{participant.firstName}} {{participant.status}}
+                            {{participant.firstName}} 
                         </div>
                         <br />
                     <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Close</button>
