--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -36,7 +36,7 @@
                         </li>
                         <li class="list-group-item d-flex justify-content-between" *ngFor="let entry of entries; index as i" [ngValue]="entry">
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.month}}/{{entry.day}}/{{entry.year}}</p>
-                            <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}} {{i}} </p>
+                            <p class="p-0 m-0 flex-grow-1" style="color: black">{{entry.title}}</p>
                             <div class="icons">
                                 <button class="btn-2" title="Edit" (click)="getValue(entry)"><span class="fa fa-pencil fa-sm" style="color: grey"></span></button>
                                 <button class="btn-2" title="View" (click)="getEntry(entry)" data-toggle="modal" data-target="#entry"><span class="fa fa-eye fa-sm"  style="color: grey"></span></button>
