--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,15 @@
     -o-background-size: cover;
  }
 
+ .user{
+  background: url('assets/images/login2.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; 
+  margin: 0;
+ }
+
 
  .journal{
   background: url('assets/images/journal backgound.jpg') no-repeat center center fixed;
@@ -199,17 +208,4 @@ hr.divide2 {
   background-image: linear-gradient(to right, rgb(194, 193, 193), black, rgb(194, 193, 193));
 }
 
-
-
-/*--------------------------------------------
-Buttons for Components
----------------------------------------------*/
-
-
-
-
-
-/*--------------------------------------------
-Login Page
----------------------------------------------*/
 
