--- a/src/app/pie-chart/pie-chart.component.css
+++ b/src/app/pie-chart/pie-chart.component.css
@@ -1,6 +1,9 @@
 .chart {
-    max-width: 380px;
-    margin: 35px auto;
+    width: 800px;
+    height: 800px;
     padding: 0;
+  }
+  canvas{
+    width: 100% !important;
   }
   
