--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -31,7 +31,7 @@
                     <div class="login-form">
                     <div class="col-md-12">
                         <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br>
-                    <h2 class="bold">User Profile</h2>
+                    <h2 class="bold">{{currentUser.firstName}}'s Profile</h2>
                     <hr class="new-divide">
                     <p class="bold">Username: <a style="font-weight: 400;">{{currentUser.username}}</a></p>
                     <div class="line"></div>
@@ -54,7 +54,7 @@
                     <p class="bold">Email: <a style="font-weight: 400;">{{currentUser.email}}</a></p>
                     <div class="line"></div>
 
-                    <p class="bold">Zoom ID: <a style="font-weight: 400;">{{currentUser.Zoom}}</a></p>
+                    <p class="bold">Zoom ID: <a style="font-weight: 400;">{{currentUser.zoomLink}}</a></p>
                     <div class="line"></div>
 
                     </div>
