corrected routing after creating a meeting

--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="form-wrapper justify-content-center">
                     <button [disabled]="loading" class="button">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" routerLink="/coffee-chat-profiles"></span>
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1" routerLink="/coffee-chat-pending-meetings"></span>
                         Create Meeting
                     </button>
                 </div>
