--- a/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
+++ b/src/app/coffee-chat-select-friends/coffee-chat-select-friends.component.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-wrapper justify-content-center">
                         <button [disabled]="loading">
-                            <a routerLink="/coffee-chat-profiles"></a>
+                            <a routerLink="/coffee-chat-pending-meetings"></a>
                             Create Meeting
                         </button>
                     </div>
